core/codegen/tests/ui-fail/uri_display.stderr
warning: the feature `specialization` is incomplete and may not be safe to use and/or cause compiler crashes
 --> $DIR/lib.rs:1:12
  |
1 | #![feature(specialization)]
  |            ^^^^^^^^^^^^^^
  |
  = note: `#[warn(incomplete_features)]` on by default
  = note: see issue #31844 <https://github.com/rust-lang/rust/issues/31844> for more information

warning: the feature `specialization` is incomplete and may not be safe to use and/or cause compiler crashes
 --> $DIR/lib.rs:1:12
  |
1 | #![feature(specialization)]
  |            ^^^^^^^^^^^^^^
  |
  = note: `#[warn(incomplete_features)]` on by default
  = note: see issue #31844 <https://github.com/rust-lang/rust/issues/31844> for more information

warning: trait objects without an explicit `dyn` are deprecated
   --> $DIR/uri_display.rs:299:43
    |
299 | impl<'a, P: UriPart> fmt::Display for &'a UriDisplay<P> {
    |                                           ^^^^^^^^^^^^^ help: use `dyn`: `dyn UriDisplay<P>`
    |
    = note: `#[warn(bare_trait_objects)]` on by default

warning: trait objects without an explicit `dyn` are deprecated
   --> $DIR/uri_display.rs:299:43
    |
299 | impl<'a, P: UriPart> fmt::Display for &'a UriDisplay<P> {
    |                                           ^^^^^^^^^^^^^ help: use `dyn`: `dyn UriDisplay<P>`
    |
    = note: `#[warn(bare_trait_objects)]` on by default

warning: `...` range patterns are deprecated
 --> $DIR/checkers.rs:9:12
  |
9 |         '0'...'9' | 'A'...'Z' | '^'...'~' | '#'...'\''
  |            ^^^ help: use `..=` for an inclusive range
  |
  = note: `#[warn(ellipsis_inclusive_range_patterns)]` on by default

warning: `...` range patterns are deprecated
 --> $DIR/checkers.rs:9:12
  |
9 |         '0'...'9' | 'A'...'Z' | '^'...'~' | '#'...'\''
  |            ^^^ help: use `..=` for an inclusive range
  |
  = note: `#[warn(ellipsis_inclusive_range_patterns)]` on by default

warning: `...` range patterns are deprecated
 --> $DIR/checkers.rs:9:24
  |
9 |         '0'...'9' | 'A'...'Z' | '^'...'~' | '#'...'\''
  |                        ^^^ help: use `..=` for an inclusive range

warning: `...` range patterns are deprecated
 --> $DIR/checkers.rs:9:24
  |
9 |         '0'...'9' | 'A'...'Z' | '^'...'~' | '#'...'\''
  |                        ^^^ help: use `..=` for an inclusive range

warning: `...` range patterns are deprecated
 --> $DIR/checkers.rs:9:36
  |
9 |         '0'...'9' | 'A'...'Z' | '^'...'~' | '#'...'\''
  |                                    ^^^ help: use `..=` for an inclusive range

warning: `...` range patterns are deprecated
 --> $DIR/checkers.rs:9:36
  |
9 |         '0'...'9' | 'A'...'Z' | '^'...'~' | '#'...'\''
  |                                    ^^^ help: use `..=` for an inclusive range

warning: `...` range patterns are deprecated
 --> $DIR/checkers.rs:9:48
  |
9 |         '0'...'9' | 'A'...'Z' | '^'...'~' | '#'...'\''
  |                                                ^^^ help: use `..=` for an inclusive range

warning: 6 warnings emitted

warning: `...` range patterns are deprecated
 --> $DIR/checkers.rs:9:48
  |
9 |         '0'...'9' | 'A'...'Z' | '^'...'~' | '#'...'\''
  |                                                ^^^ help: use `..=` for an inclusive range

warning: 6 warnings emitted

warning: the feature `specialization` is incomplete and may not be safe to use and/or cause compiler crashes
 --> $DIR/lib.rs:1:12
  |
1 | #![feature(specialization)]
  |            ^^^^^^^^^^^^^^
  |
  = note: `#[warn(incomplete_features)]` on by default
  = note: see issue #31844 <https://github.com/rust-lang/rust/issues/31844> for more information

warning: trait objects without an explicit `dyn` are deprecated
   --> $DIR/response.rs:563:27
    |
563 |     body: Option<Body<Box<io::Read + 'r>>>,
    |                           ^^^^^^^^^^^^^ help: use `dyn`: `dyn io::Read + 'r`
    |
    = note: `#[warn(bare_trait_objects)]` on by default

warning: trait objects without an explicit `dyn` are deprecated
   --> $DIR/response.rs:892:48
    |
892 |     pub fn body(&mut self) -> Option<Body<&mut io::Read>> {
    |                                                ^^^^^^^^ help: use `dyn`: `dyn io::Read`

warning: trait objects without an explicit `dyn` are deprecated
   --> $DIR/response.rs:969:52
    |
969 |     pub fn take_body(&mut self) -> Option<Body<Box<io::Read + 'r>>> {
    |                                                    ^^^^^^^^^^^^^ help: use `dyn`: `dyn io::Read + 'r`

warning: `...` range patterns are deprecated
  --> $DIR/toml_ext.rs:27:12
   |
27 |         '0'...'9' | 'A'...'Z' | 'a'...'z' | '_' | '-' => true,
   |            ^^^ help: use `..=` for an inclusive range
   |
   = note: `#[warn(ellipsis_inclusive_range_patterns)]` on by default

warning: `...` range patterns are deprecated
  --> $DIR/toml_ext.rs:27:24
   |
27 |         '0'...'9' | 'A'...'Z' | 'a'...'z' | '_' | '-' => true,
   |                        ^^^ help: use `..=` for an inclusive range

warning: `...` range patterns are deprecated
  --> $DIR/toml_ext.rs:27:36
   |
27 |         '0'...'9' | 'A'...'Z' | 'a'...'z' | '_' | '-' => true,
   |                                    ^^^ help: use `..=` for an inclusive range

warning: trait objects without an explicit `dyn` are deprecated
  --> $DIR/data.rs:18:63
   |
18 |     self::HttpReader<&'a mut hyper::buffer::BufReader<&'b mut NetworkStream>>;
   |                                                               ^^^^^^^^^^^^^ help: use `dyn`: `dyn NetworkStream`

warning: trait objects without an explicit `dyn` are deprecated
   --> $DIR/data.rs:108:41
    |
108 |         fn concrete_stream(stream: &mut NetworkStream) -> Option<NetStream> {
    |                                         ^^^^^^^^^^^^^ help: use `dyn`: `dyn NetworkStream`

warning: trait objects without an explicit `dyn` are deprecated
   --> $DIR/handler.rs:155:36
    |
155 |     fn clone_handler(&self) -> Box<Handler>;
    |                                    ^^^^^^^ help: use `dyn`: `dyn Handler`

warning: trait objects without an explicit `dyn` are deprecated
   --> $DIR/handler.rs:160:36
    |
160 |     fn clone_handler(&self) -> Box<Handler> {
    |                                    ^^^^^^^ help: use `dyn`: `dyn Handler`

warning: trait objects without an explicit `dyn` are deprecated
   --> $DIR/handler.rs:165:20
    |
165 | impl Clone for Box<Handler> {
    |                    ^^^^^^^ help: use `dyn`: `dyn Handler`

warning: trait objects without an explicit `dyn` are deprecated
   --> $DIR/handler.rs:167:28
    |
167 |     fn clone(&self) -> Box<Handler> {
    |                            ^^^^^^^ help: use `dyn`: `dyn Handler`

warning: trait objects without an explicit `dyn` are deprecated
 --> $DIR/fairings.rs:8:27
  |
8 |     all_fairings: Vec<Box<Fairing>>,
  |                           ^^^^^^^ help: use `dyn`: `dyn Fairing`

warning: trait objects without an explicit `dyn` are deprecated
  --> $DIR/fairings.rs:22:43
   |
22 |     pub fn attach(&mut self, fairing: Box<Fairing>, mut rocket: Rocket) -> Rocket {
   |                                           ^^^^^^^ help: use `dyn`: `dyn Fairing`

warning: trait objects without an explicit `dyn` are deprecated
  --> $DIR/fairings.rs:35:36
   |
35 |     fn add(&mut self, fairing: Box<Fairing>) {
   |                                    ^^^^^^^ help: use `dyn`: `dyn Fairing`

warning: trait objects without an explicit `dyn` are deprecated
  --> $DIR/error.rs:30:17
   |
30 |     Unknown(Box<::std::error::Error + Send + Sync>)
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ help: use `dyn`: `dyn ::std::error::Error + Send + Sync`

warning: trait objects without an explicit `dyn` are deprecated
  --> $DIR/route.rs:22:22
   |
22 |     pub handler: Box<Handler>,
   |                      ^^^^^^^ help: use `dyn`: `dyn Handler`

warning: 18 warnings emitted

error: fieldless structs or variants are not supported
 --> $DIR/uri_display.rs:9:1
  |
9 | struct Foo1;
  | ^^^^^^^^^^^^
  |
note: error occurred while deriving `UriDisplay`
 --> $DIR/uri_display.rs:5:10
  |
5 | #[derive(UriDisplayQuery)]
  |          ^^^^^^^^^^^^^^^
  = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: fieldless structs or variants are not supported
  --> $DIR/uri_display.rs:16:1
   |
16 | struct Foo2();
   | ^^^^^^^^^^^^^^
   |
note: error occurred while deriving `UriDisplay`
  --> $DIR/uri_display.rs:12:10
   |
12 | #[derive(UriDisplayQuery)]
   |          ^^^^^^^^^^^^^^^
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: empty enums are not supported
  --> $DIR/uri_display.rs:23:1
   |
23 | enum Foo3 { }
   | ^^^^^^^^^^^^^
   |
note: error occurred while deriving `UriDisplay`
  --> $DIR/uri_display.rs:19:10
   |
19 | #[derive(UriDisplayQuery)]
   |          ^^^^^^^^^^^^^^^
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: fieldless structs or variants are not supported
  --> $DIR/uri_display.rs:31:5
   |
31 |     Variant,
   |     ^^^^^^^
   |
note: error occurred while deriving `UriDisplay`
  --> $DIR/uri_display.rs:26:10
   |
26 | #[derive(UriDisplayQuery)]
   |          ^^^^^^^^^^^^^^^
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: tuple structs or variants must have exactly one field
  --> $DIR/uri_display.rs:39:12
   |
39 | struct Foo5(String, String);
   |            ^^^^^^^^^^^^^^^^
   |
note: error occurred while deriving `UriDisplay`
  --> $DIR/uri_display.rs:35:10
   |
35 | #[derive(UriDisplayQuery)]
   |          ^^^^^^^^^^^^^^^
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: invalid value: expected string literal
  --> $DIR/uri_display.rs:47:20
   |
47 |     #[form(field = 123)]
   |                    ^^^
   |
note: error occurred while deriving `UriDisplay`
  --> $DIR/uri_display.rs:42:10
   |
42 | #[derive(UriDisplayQuery)]
   |          ^^^^^^^^^^^^^^^
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: struct must have exactly one field
  --> $DIR/uri_display.rs:55:12
   |
55 | struct Foo7(String, usize);
   |            ^^^^^^^^^^^^^^^
   |
note: error occurred while deriving `UriDisplay`
  --> $DIR/uri_display.rs:52:10
   |
52 | #[derive(UriDisplayPath)]
   |          ^^^^^^^^^^^^^^
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: struct must have exactly one field
  --> $DIR/uri_display.rs:61:1
   |
61 | struct Foo8;
   | ^^^^^^^^^^^^
   |
note: error occurred while deriving `UriDisplay`
  --> $DIR/uri_display.rs:58:10
   |
58 | #[derive(UriDisplayPath)]
   |          ^^^^^^^^^^^^^^
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: enums are not supported
  --> $DIR/uri_display.rs:67:1
   |
67 | enum Foo9 {  }
   | ^^^^^^^^^^^^^^
   |
note: error occurred while deriving `UriDisplay`
  --> $DIR/uri_display.rs:64:10
   |
64 | #[derive(UriDisplayPath)]
   |          ^^^^^^^^^^^^^^
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: named structs are not supported
  --> $DIR/uri_display.rs:73:1
   |
73 | / struct Foo10 {
74 | | //~^ ERROR not supported
75 | |     named: usize
76 | | }
   | |_^
   |
note: error occurred while deriving `UriDisplay`
  --> $DIR/uri_display.rs:70:10
   |
70 | #[derive(UriDisplayPath)]
   |          ^^^^^^^^^^^^^^
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Foo1: UriDisplay<rocket::http::uri::Query>` is not satisfied
   --> $DIR/uri_display.rs:5:10
    |
5   | #[derive(UriDisplayQuery)]
    |          ^^^^^^^^^^^^^^^ the trait `UriDisplay<rocket::http::uri::Query>` is not implemented for `Foo1`
    |
   ::: $WORKSPACE/core/http/src/uri/from_uri_param.rs
    |
    |     type Target: UriDisplay<P>;
    |                  ------------- required by this bound in `FromUriParam`
    |
    = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Foo1: UriDisplay<rocket::http::uri::Query>` is not satisfied
   --> $DIR/uri_display.rs:5:10
    |
5   | #[derive(UriDisplayQuery)]
    |          ^^^^^^^^^^^^^^^ the trait `UriDisplay<rocket::http::uri::Query>` is not implemented for `Foo1`
    |
   ::: $WORKSPACE/core/http/src/uri/from_uri_param.rs
    |
    |     type Target: UriDisplay<P>;
    |                  ------------- required by this bound in `FromUriParam`
    |
    = note: required because of the requirements on the impl of `UriDisplay<rocket::http::uri::Query>` for `&Foo1`
    = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Foo1: UriDisplay<rocket::http::uri::Query>` is not satisfied
   --> $DIR/uri_display.rs:5:10
    |
5   | #[derive(UriDisplayQuery)]
    |          ^^^^^^^^^^^^^^^ the trait `UriDisplay<rocket::http::uri::Query>` is not implemented for `Foo1`
    |
   ::: $WORKSPACE/core/http/src/uri/from_uri_param.rs
    |
    |     type Target: UriDisplay<P>;
    |                  ------------- required by this bound in `FromUriParam`
    |
    = note: required because of the requirements on the impl of `UriDisplay<rocket::http::uri::Query>` for `&mut Foo1`
    = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Foo2: UriDisplay<rocket::http::uri::Query>` is not satisfied
   --> $DIR/uri_display.rs:12:10
    |
12  | #[derive(UriDisplayQuery)]
    |          ^^^^^^^^^^^^^^^ the trait `UriDisplay<rocket::http::uri::Query>` is not implemented for `Foo2`
    |
   ::: $WORKSPACE/core/http/src/uri/from_uri_param.rs
    |
    |     type Target: UriDisplay<P>;
    |                  ------------- required by this bound in `FromUriParam`
    |
    = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Foo2: UriDisplay<rocket::http::uri::Query>` is not satisfied
   --> $DIR/uri_display.rs:12:10
    |
12  | #[derive(UriDisplayQuery)]
    |          ^^^^^^^^^^^^^^^ the trait `UriDisplay<rocket::http::uri::Query>` is not implemented for `Foo2`
    |
   ::: $WORKSPACE/core/http/src/uri/from_uri_param.rs
    |
    |     type Target: UriDisplay<P>;
    |                  ------------- required by this bound in `FromUriParam`
    |
    = note: required because of the requirements on the impl of `UriDisplay<rocket::http::uri::Query>` for `&Foo2`
    = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Foo2: UriDisplay<rocket::http::uri::Query>` is not satisfied
   --> $DIR/uri_display.rs:12:10
    |
12  | #[derive(UriDisplayQuery)]
    |          ^^^^^^^^^^^^^^^ the trait `UriDisplay<rocket::http::uri::Query>` is not implemented for `Foo2`
    |
   ::: $WORKSPACE/core/http/src/uri/from_uri_param.rs
    |
    |     type Target: UriDisplay<P>;
    |                  ------------- required by this bound in `FromUriParam`
    |
    = note: required because of the requirements on the impl of `UriDisplay<rocket::http::uri::Query>` for `&mut Foo2`
    = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Foo3: UriDisplay<rocket::http::uri::Query>` is not satisfied
   --> $DIR/uri_display.rs:19:10
    |
19  | #[derive(UriDisplayQuery)]
    |          ^^^^^^^^^^^^^^^ the trait `UriDisplay<rocket::http::uri::Query>` is not implemented for `Foo3`
    |
   ::: $WORKSPACE/core/http/src/uri/from_uri_param.rs
    |
    |     type Target: UriDisplay<P>;
    |                  ------------- required by this bound in `FromUriParam`
    |
    = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Foo3: UriDisplay<rocket::http::uri::Query>` is not satisfied
   --> $DIR/uri_display.rs:19:10
    |
19  | #[derive(UriDisplayQuery)]
    |          ^^^^^^^^^^^^^^^ the trait `UriDisplay<rocket::http::uri::Query>` is not implemented for `Foo3`
    |
   ::: $WORKSPACE/core/http/src/uri/from_uri_param.rs
    |
    |     type Target: UriDisplay<P>;
    |                  ------------- required by this bound in `FromUriParam`
    |
    = note: required because of the requirements on the impl of `UriDisplay<rocket::http::uri::Query>` for `&Foo3`
    = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Foo3: UriDisplay<rocket::http::uri::Query>` is not satisfied
   --> $DIR/uri_display.rs:19:10
    |
19  | #[derive(UriDisplayQuery)]
    |          ^^^^^^^^^^^^^^^ the trait `UriDisplay<rocket::http::uri::Query>` is not implemented for `Foo3`
    |
   ::: $WORKSPACE/core/http/src/uri/from_uri_param.rs
    |
    |     type Target: UriDisplay<P>;
    |                  ------------- required by this bound in `FromUriParam`
    |
    = note: required because of the requirements on the impl of `UriDisplay<rocket::http::uri::Query>` for `&mut Foo3`
    = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Foo4: UriDisplay<rocket::http::uri::Query>` is not satisfied
   --> $DIR/uri_display.rs:26:10
    |
26  | #[derive(UriDisplayQuery)]
    |          ^^^^^^^^^^^^^^^ the trait `UriDisplay<rocket::http::uri::Query>` is not implemented for `Foo4`
    |
   ::: $WORKSPACE/core/http/src/uri/from_uri_param.rs
    |
    |     type Target: UriDisplay<P>;
    |                  ------------- required by this bound in `FromUriParam`
    |
    = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Foo4: UriDisplay<rocket::http::uri::Query>` is not satisfied
   --> $DIR/uri_display.rs:26:10
    |
26  | #[derive(UriDisplayQuery)]
    |          ^^^^^^^^^^^^^^^ the trait `UriDisplay<rocket::http::uri::Query>` is not implemented for `Foo4`
    |
   ::: $WORKSPACE/core/http/src/uri/from_uri_param.rs
    |
    |     type Target: UriDisplay<P>;
    |                  ------------- required by this bound in `FromUriParam`
    |
    = note: required because of the requirements on the impl of `UriDisplay<rocket::http::uri::Query>` for `&Foo4`
    = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Foo4: UriDisplay<rocket::http::uri::Query>` is not satisfied
   --> $DIR/uri_display.rs:26:10
    |
26  | #[derive(UriDisplayQuery)]
    |          ^^^^^^^^^^^^^^^ the trait `UriDisplay<rocket::http::uri::Query>` is not implemented for `Foo4`
    |
   ::: $WORKSPACE/core/http/src/uri/from_uri_param.rs
    |
    |     type Target: UriDisplay<P>;
    |                  ------------- required by this bound in `FromUriParam`
    |
    = note: required because of the requirements on the impl of `UriDisplay<rocket::http::uri::Query>` for `&mut Foo4`
    = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Foo5: UriDisplay<rocket::http::uri::Query>` is not satisfied
   --> $DIR/uri_display.rs:35:10
    |
35  | #[derive(UriDisplayQuery)]
    |          ^^^^^^^^^^^^^^^ the trait `UriDisplay<rocket::http::uri::Query>` is not implemented for `Foo5`
    |
   ::: $WORKSPACE/core/http/src/uri/from_uri_param.rs
    |
    |     type Target: UriDisplay<P>;
    |                  ------------- required by this bound in `FromUriParam`
    |
    = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Foo5: UriDisplay<rocket::http::uri::Query>` is not satisfied
   --> $DIR/uri_display.rs:35:10
    |
35  | #[derive(UriDisplayQuery)]
    |          ^^^^^^^^^^^^^^^ the trait `UriDisplay<rocket::http::uri::Query>` is not implemented for `Foo5`
    |
   ::: $WORKSPACE/core/http/src/uri/from_uri_param.rs
    |
    |     type Target: UriDisplay<P>;
    |                  ------------- required by this bound in `FromUriParam`
    |
    = note: required because of the requirements on the impl of `UriDisplay<rocket::http::uri::Query>` for `&Foo5`
    = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Foo5: UriDisplay<rocket::http::uri::Query>` is not satisfied
   --> $DIR/uri_display.rs:35:10
    |
35  | #[derive(UriDisplayQuery)]
    |          ^^^^^^^^^^^^^^^ the trait `UriDisplay<rocket::http::uri::Query>` is not implemented for `Foo5`
    |
   ::: $WORKSPACE/core/http/src/uri/from_uri_param.rs
    |
    |     type Target: UriDisplay<P>;
    |                  ------------- required by this bound in `FromUriParam`
    |
    = note: required because of the requirements on the impl of `UriDisplay<rocket::http::uri::Query>` for `&mut Foo5`
    = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Foo6: UriDisplay<rocket::http::uri::Query>` is not satisfied
   --> $DIR/uri_display.rs:42:10
    |
42  | #[derive(UriDisplayQuery)]
    |          ^^^^^^^^^^^^^^^ the trait `UriDisplay<rocket::http::uri::Query>` is not implemented for `Foo6`
    |
   ::: $WORKSPACE/core/http/src/uri/from_uri_param.rs
    |
    |     type Target: UriDisplay<P>;
    |                  ------------- required by this bound in `FromUriParam`
    |
    = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Foo6: UriDisplay<rocket::http::uri::Query>` is not satisfied
   --> $DIR/uri_display.rs:42:10
    |
42  | #[derive(UriDisplayQuery)]
    |          ^^^^^^^^^^^^^^^ the trait `UriDisplay<rocket::http::uri::Query>` is not implemented for `Foo6`
    |
   ::: $WORKSPACE/core/http/src/uri/from_uri_param.rs
    |
    |     type Target: UriDisplay<P>;
    |                  ------------- required by this bound in `FromUriParam`
    |
    = note: required because of the requirements on the impl of `UriDisplay<rocket::http::uri::Query>` for `&Foo6`
    = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Foo6: UriDisplay<rocket::http::uri::Query>` is not satisfied
   --> $DIR/uri_display.rs:42:10
    |
42  | #[derive(UriDisplayQuery)]
    |          ^^^^^^^^^^^^^^^ the trait `UriDisplay<rocket::http::uri::Query>` is not implemented for `Foo6`
    |
   ::: $WORKSPACE/core/http/src/uri/from_uri_param.rs
    |
    |     type Target: UriDisplay<P>;
    |                  ------------- required by this bound in `FromUriParam`
    |
    = note: required because of the requirements on the impl of `UriDisplay<rocket::http::uri::Query>` for `&mut Foo6`
    = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Foo7: UriDisplay<rocket::http::uri::Path>` is not satisfied
   --> $DIR/uri_display.rs:52:10
    |
52  | #[derive(UriDisplayPath)]
    |          ^^^^^^^^^^^^^^ the trait `UriDisplay<rocket::http::uri::Path>` is not implemented for `Foo7`
    |
   ::: $WORKSPACE/core/http/src/uri/from_uri_param.rs
    |
    |     type Target: UriDisplay<P>;
    |                  ------------- required by this bound in `FromUriParam`
    |
    = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Foo7: UriDisplay<rocket::http::uri::Path>` is not satisfied
   --> $DIR/uri_display.rs:52:10
    |
52  | #[derive(UriDisplayPath)]
    |          ^^^^^^^^^^^^^^ the trait `UriDisplay<rocket::http::uri::Path>` is not implemented for `Foo7`
    |
   ::: $WORKSPACE/core/http/src/uri/from_uri_param.rs
    |
    |     type Target: UriDisplay<P>;
    |                  ------------- required by this bound in `FromUriParam`
    |
    = note: required because of the requirements on the impl of `UriDisplay<rocket::http::uri::Path>` for `&Foo7`
    = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Foo8: UriDisplay<rocket::http::uri::Path>` is not satisfied
   --> $DIR/uri_display.rs:58:10
    |
58  | #[derive(UriDisplayPath)]
    |          ^^^^^^^^^^^^^^ the trait `UriDisplay<rocket::http::uri::Path>` is not implemented for `Foo8`
    |
   ::: $WORKSPACE/core/http/src/uri/from_uri_param.rs
    |
    |     type Target: UriDisplay<P>;
    |                  ------------- required by this bound in `FromUriParam`
    |
    = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Foo8: UriDisplay<rocket::http::uri::Path>` is not satisfied
   --> $DIR/uri_display.rs:58:10
    |
58  | #[derive(UriDisplayPath)]
    |          ^^^^^^^^^^^^^^ the trait `UriDisplay<rocket::http::uri::Path>` is not implemented for `Foo8`
    |
   ::: $WORKSPACE/core/http/src/uri/from_uri_param.rs
    |
    |     type Target: UriDisplay<P>;
    |                  ------------- required by this bound in `FromUriParam`
    |
    = note: required because of the requirements on the impl of `UriDisplay<rocket::http::uri::Path>` for `&Foo8`
    = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Foo9: UriDisplay<rocket::http::uri::Path>` is not satisfied
   --> $DIR/uri_display.rs:64:10
    |
64  | #[derive(UriDisplayPath)]
    |          ^^^^^^^^^^^^^^ the trait `UriDisplay<rocket::http::uri::Path>` is not implemented for `Foo9`
    |
   ::: $WORKSPACE/core/http/src/uri/from_uri_param.rs
    |
    |     type Target: UriDisplay<P>;
    |                  ------------- required by this bound in `FromUriParam`
    |
    = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Foo9: UriDisplay<rocket::http::uri::Path>` is not satisfied
   --> $DIR/uri_display.rs:64:10
    |
64  | #[derive(UriDisplayPath)]
    |          ^^^^^^^^^^^^^^ the trait `UriDisplay<rocket::http::uri::Path>` is not implemented for `Foo9`
    |
   ::: $WORKSPACE/core/http/src/uri/from_uri_param.rs
    |
    |     type Target: UriDisplay<P>;
    |                  ------------- required by this bound in `FromUriParam`
    |
    = note: required because of the requirements on the impl of `UriDisplay<rocket::http::uri::Path>` for `&Foo9`
    = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Foo10: UriDisplay<rocket::http::uri::Path>` is not satisfied
   --> $DIR/uri_display.rs:70:10
    |
70  | #[derive(UriDisplayPath)]
    |          ^^^^^^^^^^^^^^ the trait `UriDisplay<rocket::http::uri::Path>` is not implemented for `Foo10`
    |
   ::: $WORKSPACE/core/http/src/uri/from_uri_param.rs
    |
    |     type Target: UriDisplay<P>;
    |                  ------------- required by this bound in `FromUriParam`
    |
    = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Foo10: UriDisplay<rocket::http::uri::Path>` is not satisfied
   --> $DIR/uri_display.rs:70:10
    |
70  | #[derive(UriDisplayPath)]
    |          ^^^^^^^^^^^^^^ the trait `UriDisplay<rocket::http::uri::Path>` is not implemented for `Foo10`
    |
   ::: $WORKSPACE/core/http/src/uri/from_uri_param.rs
    |
    |     type Target: UriDisplay<P>;
    |                  ------------- required by this bound in `FromUriParam`
    |
    = note: required because of the requirements on the impl of `UriDisplay<rocket::http::uri::Path>` for `&Foo10`
    = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
